--- a/crates/ra_analysis/Cargo.toml
+++ b/crates/ra_analysis/Cargo.toml
@@ -14,7 +14,7 @@ fst = "0.3.1"
 im = "12.0.0"
 ra_syntax = { path = "../ra_syntax" }
 ra_editor = { path = "../ra_editor" }
-salsa = { path = "../salsa" }
+salsa = "0.4.1"
 
 [dev-dependencies]
 test_utils = { path = "../test_utils" }
